<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rtmonitor_test</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="lalit.kumar.begani@intel.com">lkumarbe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rtmonitor</build_depend>
  <build_depend>rtmonitor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rtmonitor</exec_depend>
  <exec_depend>rtmonitor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
